--- a/CW7Decorator/CW7Decorator.csproj
+++ b/CW7Decorator/CW7Decorator.csproj
@@ -43,8 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BorderDecorator.cs" />
+    <Compile Include="CookieDecorator.cs" />
+    <Compile Include="Decorator.cs" />
+    <Compile Include="IWidget.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScrollDecorator.cs" />
+    <Compile Include="TextField.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
